--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numba = "^0.54.1"
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
 icecream = "^2.1.1"
+matplotlib = "^3.4.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
